--- a/app/src/main/res/layout/stage_list_item.xml
+++ b/app/src/main/res/layout/stage_list_item.xml
@@ -14,7 +14,7 @@
         android:layout_alignParentRight="true"
         android:ellipsize="marquee"
         android:singleLine="true"
-        android:text="Nome stage"
+        android:text="@string/nome_stage"
         android:textSize="12sp" />
 
     <TextView
@@ -26,6 +26,6 @@
         android:layout_alignParentTop="true"
         android:layout_alignWithParentIfMissing="true"
         android:gravity="center_vertical"
-        android:text="Azienda"
+        android:text="@string/nome_azienda"
         android:textSize="16sp" />
 </RelativeLayout>
