creata attività lista trofei

--- a/app/src/main/res/layout/stage_list_item.xml
+++ b/app/src/main/res/layout/stage_list_item.xml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:padding="6dp">
 
 
     <TextView
         android:id="@+id/stage"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="26dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:ellipsize="marquee"
         android:singleLine="true"
         android:text="@string/nome_stage"
-        android:textSize="12sp" />
+        android:textSize="12sp"/>
 
     <TextView
         android:id="@+id/azienda"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/stage"
         android:layout_alignParentRight="true"
@@ -27,5 +26,7 @@
         android:layout_alignWithParentIfMissing="true"
         android:gravity="center_vertical"
         android:text="@string/nome_azienda"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:textColor="@color/textPrimaryColor" />
+
 </RelativeLayout>
