--- a/app/src/main/res/layout/stage_list_item.xml
+++ b/app/src/main/res/layout/stage_list_item.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
-    android:padding="6dp">
+    android:paddingLeft="@dimen/activity_horizontal_margin">
 
 
     <TextView
