--- a/app/src/main/res/layout/fragment_trophy_list.xml
+++ b/app/src/main/res/layout/fragment_trophy_list.xml
@@ -3,12 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="it.unipd.mpezzutt.stageitrun.TrophyActivity">
+    android:orientation="vertical">
 
     <GridView
         android:layout_width="wrap_content"
