--- a/app/src/main/res/layout/fragment_stage_list.xml
+++ b/app/src/main/res/layout/fragment_stage_list.xml
@@ -11,5 +11,13 @@
         android:layout_height="wrap_content"
         android:id="@+id/android:list"/>
 
+    <TextView
+        android:id="@id/android:empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/no_data_stage"
+        android:layout_gravity="center"
+        android:padding="@dimen/activity_horizontal_margin"/>
+
 
 </LinearLayout>
