--- a/app/src/main/res/layout/activity_stage_spec.xml
+++ b/app/src/main/res/layout/activity_stage_spec.xml
@@ -1,26 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    tools:context="it.unipd.mpezzutt.stageitrun.StageSpecActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Nome azienda"
-        android:id="@+id/stageTitle" />
+        android:text="@string/nome_azienda"
+        android:id="@+id/nomeAziendaSpec" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingTop="@dimen/small_padding"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/nome_stage"
+        android:id="@+id/nomeStageSpec"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="@dimen/medium_padding"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Descrizione stage"
-        android:id="@+id/stageSpec"/>
+        android:text="@string/descrizione_stage"
+        android:id="@+id/stageDescriptionSpec" />
 
 </LinearLayout>
