--- a/app/src/main/res/layout/trophy_list_item.xml
+++ b/app/src/main/res/layout/trophy_list_item.xml
@@ -6,13 +6,13 @@
     android:padding="4dp">
 
     <ImageView
-        android:id="@+id/trophy_image"
+        android:id="@+id/trophyImage"
         android:layout_width="match_parent"
         android:layout_height="96dp"
         android:src="@drawable/trophy"/>
 
     <TextView
-        android:id="@+id/trophy_name"
+        android:id="@+id/trophyName"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
