--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -65,8 +65,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/prompt_password"
-            android:imeActionId="@+id/register"
-            android:imeActionLabel="@string/action_sign_in_short"
             android:inputType="textPassword"
             android:maxLines="1"
             android:singleLine="true" />
@@ -82,8 +80,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/prompt_password_confirm"
-            android:imeActionId="@+id/register_confirm"
-            android:imeActionLabel="@string/action_sign_in_short"
+            android:imeActionId="@+id/register"
+            android:imeActionLabel="@string/action_register"
+            android:imeOptions="actionUnspecified"
             android:inputType="textPassword"
             android:maxLines="1"
             android:singleLine="true" />
@@ -92,7 +91,6 @@
 
     <Button
         android:id="@+id/email_register_button"
-
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
