aggiunto spinner e ordinamento lista stage

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,7 +7,7 @@
         android:id="@+id/action_qrcode"
         android:orderInCategory="10"
         android:icon="@drawable/ic_photo_camera_white"
-        android:title="QR Code"
+        android:title="Scan QR Code"
         app:showAsAction="ifRoom" />
 
     <item
@@ -17,9 +17,4 @@
         android:title="User account"
         app:showAsAction="ifRoom" />
 
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
 </menu>
