--- a/app/src/main/res/layout/fragment_stage_list.xml
+++ b/app/src/main/res/layout/fragment_stage_list.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/StageFragment">
 
 
     <ListView
+        android:id="@+id/android:list"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/android:list"/>
+        android:layout_height="wrap_content"/>
 
     <TextView
         android:id="@id/android:empty"
