--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -91,7 +91,7 @@
 
     <View
         android:id="@+id/dialog_divider"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="?android:attr/dividerHorizontal"
         android:layout_below="@+id/dialog_layout_trofei"/>
