--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -3,8 +3,9 @@
     <string-array name="sort_stage">
         <item>A..Z</item>
         <item>Z..A</item>
-        <item>00:00..24:00</item>
-        <item>24:00..00:00</item>
-        <item>Svolti</item>
+        <item>00..24</item>
+        <item>24..00</item>
+        <item>Done</item>
+        <item>To-do</item>
     </string-array>
 </resources>
