--- a/app/src/main/res/layout/fragment_user_list.xml
+++ b/app/src/main/res/layout/fragment_user_list.xml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/userRankRecycler"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:id="@+id/StageFragment">
-
+    android:orientation="vertical" >
 
     <ListView
-        android:id="@+id/android:list"
+        android:id="@id/android:list"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"></ListView>
 
     <TextView
         android:id="@id/android:empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/no_data_stage"
+        android:text="@string/no_user_rank"
         android:layout_gravity="center"
         android:padding="@dimen/activity_horizontal_margin"/>
-
 
 </LinearLayout>
