--- a/app/src/main/res/layout/stage_list_item.xml
+++ b/app/src/main/res/layout/stage_list_item.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="?android:attr/listPreferredItemHeight"
+    android:layout_height="wrap_content"
+    android:paddingTop="8dp"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="8dp"
     android:paddingLeft="@dimen/activity_horizontal_margin">
 
     <LinearLayout
