--- a/app/src/main/res/layout/fragment_user_list.xml
+++ b/app/src/main/res/layout/fragment_user_list.xml
@@ -8,8 +8,9 @@
 
     <ListView
         android:id="@id/android:list"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></ListView>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </ListView>
 
     <TextView
         android:id="@id/android:empty"
