--- a/app/src/main/res/layout/user_list_item.xml
+++ b/app/src/main/res/layout/user_list_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/rankLayout">
 
     <TextView
         android:id="@+id/userStage"
@@ -21,6 +22,7 @@
         android:layout_margin="@dimen/text_margin"
         android:layout_centerVertical="true"
         android:layout_toRightOf="@+id/userStage"
+        android:layout_alignParentRight="true"
         android:textAppearance="?attr/textAppearanceListItem"
         android:text="@string/nome_utente"/>
 
