--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="colorPrimary">#2196f3</color>
     <color name="colorPrimaryDark">#0d47a1</color>
+    <color name="colorPrimaryLight">#e3f2fd</color>
     <color name="colorAccent">#ff1744</color>
     <color name="textPrimaryColor">#000000</color>
     <color name="textSecondaryColor">#ffffff</color>
