--- a/app/src/main/res/layout/activity_stage_spec.xml
+++ b/app/src/main/res/layout/activity_stage_spec.xml
@@ -7,8 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="it.unipd.mpezzutt.stageitrun.StageSpecActivity"
-    android:weightSum="1">
+    tools:context="it.unipd.mpezzutt.stageitrun.StageSpecActivity">
 
     <LinearLayout
         android:id="@+id/stageSpecTopLayout"
